@@ -223,7 +223,7 @@ public class Graphical_Boolean extends Basic_Graphical_widget implements View.On
                                     Tracer.d(mytag, "no translation for: " + Value_1);
                                     state.setText(stateS + " : " + Value_1);
                                 }
-                            } else{
+                            } else {
                                 bool.setImageResource(R.drawable.boolean_n_a);
                                 change_this_icon(0);
                                 state.setText(stateS + " : " + "N/A");
@@ -306,7 +306,31 @@ public class Graphical_Boolean extends Basic_Graphical_widget implements View.On
                 for (int i = itemArray.length(); i >= 0; i--) {
                     try {
                         HashMap<String, String> map = new HashMap<>();
-                        map.put("TV_Value", itemArray.getJSONObject(i).getString("TV_Value"));
+                        if (itemArray.getJSONObject(i).getString("TV_Value").equals(value0) || itemArray.getJSONObject(i).getString("TV_Value").equals("0")) {
+                            try {
+                                Tracer.d(mytag, "Try to get value translate from R.STRING");
+                                map.put("TV_Value", context.getString(Graphics_Manager.getStringIdentifier(getContext(), Value_0.toLowerCase())));
+                            } catch (Exception e1) {
+                                Tracer.d(mytag, "no translation for: " + Value_0);
+                                map.put("TV_Value", Value_0);
+                            }
+                        } else if (itemArray.getJSONObject(i).getString("TV_Value").equals(value1) || itemArray.getJSONObject(i).getString("TV_Value").equals("1")) {
+                            try {
+                                Tracer.d(mytag, "Try to get value translate from R.STRING");
+                                map.put("TV_Value", context.getString(Graphics_Manager.getStringIdentifier(getContext(), Value_1.toLowerCase())));
+                            } catch (Exception e1) {
+                                Tracer.d(mytag, "no translation for: " + Value_1);
+                                map.put("TV_Value", Value_1);
+                            }
+                        } else {
+                            try {
+                                Tracer.d(mytag, "Try to get value translate from R.STRING");
+                                map.put("TV_Value", context.getString(Graphics_Manager.getStringIdentifier(getContext(), "N/A")));
+                            } catch (Exception e1) {
+                                Tracer.d(mytag, "no translation for: " + "N/A");
+                                map.put("TV_Value", "N/A");
+                            }
+                        }
                         map.put("date", itemArray.getJSONObject(i).getString("date"));
                         listItem.add(map);
                         Tracer.d(mytag, map.toString());
@@ -314,26 +338,33 @@ public class Graphical_Boolean extends Basic_Graphical_widget implements View.On
                         Tracer.e(mytag, "Error getting json TV_Value");
                     }
                 }
-            } else if (api_version == 0.7f) {
+            } else if (api_version >= 0.7f) {
                 for (int i = 0; i < itemArray.length(); i++) {
                     try {
                         HashMap<String, String> map = new HashMap<>();
-                        map.put("TV_Value", itemArray.getJSONObject(i).getString("value_str"));
-                        map.put("date", itemArray.getJSONObject(i).getString("date"));
-                        listItem.add(map);
-                        Tracer.d(mytag, map.toString());
-                    } catch (Exception e) {
-                        Tracer.e(mytag, "Error getting json TV_Value");
-                    }
-                }
-            } else if (api_version >= 0.8f) {
-                //Use abstract class to get timestamp conversion
-                for (int i = 0; i < itemArray.length(); i++) {
-                    try {
-                        HashMap<String, String> map = new HashMap<>();
-                        map.put("TV_Value", itemArray.getJSONObject(i).getString("value_str"));
-                        String currenTimestamp = String.valueOf((long) (itemArray.getJSONObject(i).getInt("timestamp")) * 1000);
-                        map.put("date", display_sensor_info.timestamp_convertion(currenTimestamp, context));
+                        if (itemArray.getJSONObject(i).getString("value_str").equals(value0) || itemArray.getJSONObject(i).getString("value_str").equals("0")) {
+                            try {
+                                map.put("TV_Value", context.getString(Graphics_Manager.getStringIdentifier(getContext(), Value_0.toLowerCase())));
+                            } catch (Exception e1) {
+                                Tracer.d(mytag, "no translation for: " + Value_0);
+                                map.put("TV_Value", Value_0);
+                            }
+                        } else if (itemArray.getJSONObject(i).getString("value_str").equals(value1) || itemArray.getJSONObject(i).getString("value_str").equals("1")) {
+                            try {
+                                map.put("TV_Value", context.getString(Graphics_Manager.getStringIdentifier(getContext(), Value_1.toLowerCase())));
+                            } catch (Exception e1) {
+                                Tracer.d(mytag, "no translation for: " + Value_1);
+                                map.put("TV_Value", Value_1);
+                            }
+                        } else {
+                            map.put("TV_Value", "N/A");
+                        }
+                        if (api_version == 0.7f) {
+                            map.put("date", itemArray.getJSONObject(i).getString("date"));
+                        } else if (api_version >= 0.8f) {
+                            String currenTimestamp = String.valueOf((long) (itemArray.getJSONObject(i).getInt("timestamp")) * 1000);
+                            map.put("date", display_sensor_info.timestamp_convertion(currenTimestamp, context));
+                        }
                         listItem.add(map);
                         Tracer.d(mytag, map.toString());
                     } catch (Exception e) {
