@@ -22,6 +22,7 @@
     $ 1.4
       % Version 24
       _ 2016-xx-xx
+      * Close #115 History for boolean widget with translation too
       % Version 23
       _ 2016-09-25
       * Some translation for xee and body plugin
